# Lectra

./: .env.example  .gitignore  ARCHITECTURE.md  ASSET_UPLOAD_GUIDE.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  CUSTOMIZATION.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DOCUMENT_PIPELINE_SETUP.md  FEATURES_V2.md  GITHUB_DEPLOYMENT.md  GITHUB_DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_SYSTEM_GUIDE.md  LICENSE  MIGRATION_GUIDE.md  NOTEBOOK_FEATURES.md  OPTIMIZATION_README.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PPTX_IMPROVEMENTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP.md  STUDY_MODE_GUIDE.md  VIDEO_GENERATION.md  launch.ps1  setup-animations.ps1  setup-v2.ps1  setup.sh  test_api_detailed.py  test_ollama_direct.py  test_quiz.py  (+1 more)
.github/workflows/: build.yml
sample_data/: animations_example.json  timings_example.json
scripts/: build_sidecar.ps1
sidecar/: 1.4.0  IMPLEMENTATION_CHECKLIST.md  MIGRATION_GUIDE.md  STREAMING_ARCHITECTURE.md  STREAMING_IMPLEMENTATION_SUMMARY.md  STREAMING_OPTIMIZATION.md  STREAMING_QUICK_REF.md  VIDEO_RENDERING_FIX.md  launcher.py  lecture-sidecar.spec  requirements.txt  test_upload_endpoint.py  test_upload_pipeline.py
sidecar/app/: __init__.py  api.py  config.py
ui/: create-icons.ps1  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
ui/src/: App.vue  (+1 more)
ui/src-tauri/: Cargo.toml  package.json  tauri.conf.json
ui/src-tauri/icons/: README.md
ui/src-tauri/src/: main.rs
(+43 files in other folders)
