[package]
name = "lectra"
version = "1.0.0"
description = "Lecture TTS with Realistic Audio"
authors = ["Team Just-Git-Gud"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-all", "http-request", "path-all", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-read-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
